Fixed sizing on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -361,4 +361,19 @@ span {
         font-size: 16px;
         vertical-align: middle;
     }
+
+    @keyframes appear-left {
+        0% {
+            height: 0;
+            width: 0;
+        }
+        50% {
+            height: 230px;
+            width: 0;
+        }
+        100% {
+            width: 364px;
+        }
+    }
+    
 }
